--- a/style.css
+++ b/style.css
@@ -37,6 +37,17 @@ header {
     font-size: 12px;
 }
 
+form > input {
+    height: 50px;
+    background-color: var(--tertiary-color);
+    border: 0;
+    color: white;
+    font-family: Helvetica;
+    font-size: 24px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
 @media (min-width: 1001px) {
     .transaction:nth-child(5n) {
         margin-right: 0px;
